text updates, created editorconfig, gitignore, added normalize

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 -->
 <html>
   <head>
-    <title>Family Freestyle Martial Arts</title>
     <meta charset="utf-8" />
+    <title>Family Freestyle Martial Arts</title>
+    <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
@@ -52,32 +55,38 @@
         <div>
           <div class="box">
             <div class="image fit">
-              <img src="images/pic01.jpg" alt="" />
+              <img src="images/outside.jpg" alt="" />
             </div>
             <div class="content">
               <header class="align-center">
-                <h2>Lorem ipsum dolor</h2>
-                <p>we offer high-quality martial art programs</p>
+                <h2>high-quality martial arts</h2>
+                <p>
+                  If you are looking to pursue advancement in your understanding
+                  of the martial arts, and develop a level of self defense that
+                  will protect you in bad situations, you have found the right
+                  place.
+                </p>
               </header>
               <hr />
               <p>
-                Cras aliquet urna ut sapien tincidunt, quis malesuada elit
-                facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh
-                a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                volutpat lacus placerat malesuada. Praesent in sem ex. Morbi
-                mattis sapien pretium tellus venenatis, at egestas urna ornare.
+                Family Freestyle Martial Arts is a traditional martial arts
+                school that teaches practical self-defense skills and the
+                culture of traditional martial arts. The core curriculum is
+                traditional Karate with techniques and training methods adapted
+                from various martial arts. The kids karate curriculum includes
+                community safety, home safety, pro-social behaviors, strategies
+                to deal with bullying and teasing. Our goal is to create
+                students that display the qualities of leadership: courage,
+                empathy and a positive attitude.
               </p>
               <p>
-                Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna.
-                Sed et libero ex. Orci varius natoque penatibus et magnis dis
-                parturient montes, nascetur ridiculus mus. Suspendisse id
-                hendrerit felis. Nulla viverra tempor dui at congue.
-                Pellentesque quis nulla ornare, congue nisi id, finibus nulla.
-                Aliquam sit amet hendrerit purus. Donec libero massa, posuere
-                fermentum eros sit amet, maximus fringilla augue. Maecenas at
-                rhoncus lorem. Vivamus ultricies consequat est, efficitur
-                convallis libero. Vivamus rutrum semper mauris, vitae consequat
-                eros tempor ac. Pellentesque et ornare sapien
+                As an adult, you will be instructed at your own pace so you are
+                gradually introduced to new fitness and well being. As a child
+                we will focus on your growth in character development that can
+                lead to growth in school with better focus and concentration,
+                and respect for family and friends. Try an orientation class or
+                two today and experience the great changes that karate training
+                can give to you.
               </p>
             </div>
           </div>
@@ -91,11 +100,11 @@
         <div id="flexgrid">
           <div>
             <header>
-              <h3>Tempus Feugiat</h3>
+              <h3>Kids Karate</h3>
             </header>
             <p>
-              Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia,
-              magna a ullamcorper laoreet, lectus arcu
+              Classes focuses on fundamental movement skills, following
+              directions and enjoying movement.
             </p>
             <ul class="actions">
               <li><a href="#" class="button alt">Learn More</a></li>
@@ -103,11 +112,11 @@
           </div>
           <div>
             <header>
-              <h3>Aliquam Nulla</h3>
+              <h3>Karate</h3>
             </header>
             <p>
-              Ut convallis, sem sit amet interdum consectetuer, odio augue
-              aliquam leo, nec dapibus tortor nibh sed
+              Classes focuses on fundamental movement skills, following
+              directions and enjoying movement.
             </p>
             <ul class="actions">
               <li><a href="#" class="button alt">Learn More</a></li>
@@ -115,11 +124,11 @@
           </div>
           <div>
             <header>
-              <h3>Sed Magna</h3>
+              <h3>Workshops</h3>
             </header>
             <p>
-              Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a
-              diam sit amet mi ullamcorper vehicula.
+              Events and Workshops on martial arts, self-defense, fitness and
+              health at Practical Karate
             </p>
             <ul class="actions">
               <li><a href="#" class="button alt">Learn More</a></li>
@@ -136,7 +145,7 @@
           <div>
             <div class="box">
               <div class="image fit">
-                <img src="images/pic02.jpg" alt="" />
+                <img src="images/adults.jpg" alt="" />
               </div>
               <div class="content">
                 <header class="align-center">
@@ -159,11 +168,11 @@
           <div>
             <div class="box">
               <div class="image fit">
-                <img src="images/pic03.jpg" alt="" />
+                <img src="images/kids.jpg" alt="" />
               </div>
               <div class="content">
                 <header class="align-center">
-                  <h2>Vestibulum sit amet</h2>
+                  <h2>Adult Classes</h2>
                   <p>mattis sapien pretium tellus venenatis</p>
                 </header>
                 <hr />
@@ -186,7 +195,7 @@
     <section id="four" class="wrapper style3">
       <div class="inner">
         <header class="align-center">
-          <h2>Morbi interdum mollis sapien</h2>
+          <h2>Kid Classes</h2>
           <p>
             Cras aliquet urna ut sapien tincidunt, quis malesuada elit
             facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a
