corrected some text, cleaned up footer

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div id="flexgrid">
           <div>
             <header>
-              <h3>Kids Karate</h3>
+              <h3>Kids</h3>
             </header>
             <p>
               Classes focuses on fundamental movement skills, following
@@ -149,7 +149,7 @@
               </div>
               <div class="content">
                 <header class="align-center">
-                  <h2>Lorem ipsum dolor</h2>
+                  <h2>Fitness</h2>
                   <p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
                 </header>
                 <hr />
@@ -195,13 +195,11 @@
     <section id="four" class="wrapper style3">
       <div class="inner">
         <header class="align-center">
-          <h2>Kid Classes</h2>
+          <h2>What are Martial Arts?</h2>
           <p>
-            Cras aliquet urna ut sapien tincidunt, quis malesuada elit
-            facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a
-            libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat
-            lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien
-            pretium tellus venenatis, at egestas urna ornare.
+            Martial Arts are the path to developing mind, body, and spirit. Our
+            mission is excellence and dedication. Give yourself and your family
+            the benefits of self defense and confidence.
           </p>
         </header>
       </div>
@@ -229,18 +227,18 @@
                     placeholder="Email"
                   />
                 </div>
-                <div class="field">
-                  <label for="dept">Department</label>
+                <!-- <div class="field">
+                  <label for="dept">Subject</label>
                   <div class="select-wrapper">
                     <select name="dept" id="dept">
                       <option value="">- Category -</option>
-                      <option value="1">Manufacturing</option>
-                      <option value="1">Shipping</option>
-                      <option value="1">Administration</option>
-                      <option value="1">Human Resources</option>
+                      <option value="1">How to support FFMA</option>
+                      <option value="1">Classes</option>
+                      <option value="1">Events</option>
+                      <option value="1">General Questions</option>
                     </select>
                   </div>
-                </div>
+                </div> -->
                 <div class="field">
                   <label for="message">Message</label>
                   <textarea
@@ -264,10 +262,11 @@
           </div>
         </section>
         <div class="copyright">
-          &copy; Family Freestyle Martial Arts design:
-          <a href="https://templated.co/">TEMPLATED</a>. Images
-          <a href="https://unsplash.com/">Unsplash</a>. Video
-          <a href="http://coverr.co/">Coverr</a>.
+          Copyright &copy;
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          Family Freestyle Martial Arts
         </div>
       </div>
     </footer>
