updated classes text

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         <div id="flexgrid">
           <div>
             <header>
-              <h3>Kids</h3>
+              <h3>Self Defense</h3>
             </header>
             <p>
-              Classes focuses on fundamental movement skills, following
-              directions and enjoying movement.
+              Martial Arts can be a very effective form of self-protection if
+              it's taught and trained correctly.
             </p>
             <ul class="actions">
               <li><a href="#" class="button alt">Learn More</a></li>
@@ -112,11 +112,11 @@
           </div>
           <div>
             <header>
-              <h3>Karate</h3>
+              <h3>Mental Health</h3>
             </header>
             <p>
-              Classes focuses on fundamental movement skills, following
-              directions and enjoying movement.
+              In addition to improving physical fitness, martial arts can
+              improve mental and emotional health.
             </p>
             <ul class="actions">
               <li><a href="#" class="button alt">Learn More</a></li>
@@ -127,8 +127,8 @@
               <h3>Workshops</h3>
             </header>
             <p>
-              Events and Workshops on martial arts, self-defense, fitness and
-              health at Practical Karate
+              Events and workshops on martial arts, self-defense, fitness and
+              discipline.
             </p>
             <ul class="actions">
               <li><a href="#" class="button alt">Learn More</a></li>
@@ -149,17 +149,18 @@
               </div>
               <div class="content">
                 <header class="align-center">
-                  <h2>Fitness</h2>
-                  <p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
+                  <h2>Adult Training</h2>
+                  <p>
+                    Want a fun and challenging way to get in the best shape of
+                    your life?
+                  </p>
                 </header>
                 <hr />
                 <p>
-                  Cras aliquet urna ut sapien tincidunt, quis malesuada elit
-                  facilisis. Vestibulum sit amet tortor velit. Nam elementum
-                  nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                  quis volutpat lacus placerat malesuada. Praesent in sem ex.
-                  Morbi mattis sapien pretium tellus venenatis, at egestas urna
-                  ornare.
+                  Our adult martial arts classes will not only get in the best
+                  shape of your life - you will gain useful skills such as
+                  self-esteem, self-defense, relieve stress, and make good
+                  friends along the way.
                 </p>
               </div>
             </div>
@@ -172,17 +173,19 @@
               </div>
               <div class="content">
                 <header class="align-center">
-                  <h2>Adult Classes</h2>
-                  <p>mattis sapien pretium tellus venenatis</p>
+                  <h2>Kid Classes</h2>
+                  <p>
+                    Equip your children with self confidence and respect for
+                    others.
+                  </p>
                 </header>
                 <hr />
                 <p>
-                  Cras aliquet urna ut sapien tincidunt, quis malesuada elit
-                  facilisis. Vestibulum sit amet tortor velit. Nam elementum
-                  nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                  quis volutpat lacus placerat malesuada. Praesent in sem ex.
-                  Morbi mattis sapien pretium tellus venenatis, at egestas urna
-                  ornare.
+                  Martial Arts emphasizes academic excellence, family
+                  responsibility and personal protection for children. They
+                  instill character, discipline and self respect in kids of all
+                  ages. Armed with positive attributes, children develop inner
+                  strength necessary to make good choices.
                 </p>
               </div>
             </div>
