--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div>
           <div class="box">
             <div class="image fit">
-              <img src="images/outside.jpg" alt="" />
+              <img src="images/kids-small.jpg" alt="" />
             </div>
             <div class="content">
               <header class="align-center">
@@ -182,10 +182,9 @@
                 <hr />
                 <p>
                   Martial Arts emphasizes academic excellence, family
-                  responsibility and personal protection for children. They
-                  instill character, discipline and self respect in kids of all
-                  ages. Armed with positive attributes, children develop inner
-                  strength necessary to make good choices.
+                  responsibility and personal protection for children. Armed
+                  with positive attributes, children develop inner strength
+                  necessary to make good choices.
                 </p>
               </div>
             </div>
@@ -200,9 +199,11 @@
         <header class="align-center">
           <h2>What are Martial Arts?</h2>
           <p>
-            Martial Arts are the path to developing mind, body, and spirit. Our
-            mission is excellence and dedication. Give yourself and your family
-            the benefits of self defense and confidence.
+            Martial Arts are the path to developing mind, body, and spirit.
+            <br />
+            Our mission is excellence and dedication. <br />
+            Give yourself and your family the benefits of self defense and
+            confidence.
           </p>
         </header>
       </div>
